# MATAR

./: .gitignore  .gitmodules  CMakeLists.txt  Cone_bin.stl  DanielsNotes.txt  MATAR_LLM_CONTEXT.md  README.md  cuda_cmake_build.sh  grapher.py  hip_cmake_build.sh  jacobi_solver_convergence_fix_summary.md  kokkos-install.sh  matar.h  openmp_cmake_build.sh  overall_data.csv  sourceme-env.sh  v1_todo.md
benchmark/: CMakeLists.txt
benchmark/src/: CArrayDevice_benchmark.cpp  CArray_benchmark.cpp  serial_types_benchmark.cpp
examples/: CMakeLists.txt  CSCKokkos.cpp  CSRKokkos.cpp  ann_distributed.cpp  ann_distributed_crs.cpp  ann_kokkos.cpp  ann_kokkos_compare.cpp  kokkos_for.cpp  kokkos_for_atomic.cpp  levelset_generator.cpp  levelset_to_stl.hpp  main.cpp  main_kokkos.cpp  matar_mpi.cpp  mtr-kokkos-simple.cpp  parallel_hello_world.cpp  random_numbers.cpp  stl_tester.cpp  test_drrak.cpp  test_dual_types.cpp  test_for.cpp  test_lu_solve.cpp  test_qr_solve.cpp  test_set_values.cpp  test_shared_ptr.cpp  test_tpetra_carray.cpp  test_tpetra_crs.cpp  test_tpetra_farray.cpp  test_tpetra_mesh.cpp
examples/gArrayofgArrays/: CMakeLists.txt  main.cpp
examples/halfspace_cooling/: CMakeLists.txt  halfspace_cooling.cpp
examples/laplace/: CMakeLists.txt  main_carray_right.cpp  main_carray_wrong.cpp  main_carraykokkos_c_indexing.cpp  main_carraykokkos_default_indexing.cpp  main_cpp.cpp  main_farray_right.cpp  main_farray_wrong.cpp  main_farraykokkos_default_indexing.cpp  main_farraykokkos_f_indexing.cpp  main_kokkosview.cpp
examples/laplaceMPI/: CMakeLists.txt  README.md  debug_mpi_mesh_test.cpp  laplace_mpi.cpp  mpi_mesh_test.cpp  simple_halo.cpp  simple_mpi.cpp
examples/linear_algebra/: CMakeLists.txt  linear_algebra_test.cpp
examples/matar_fortran/: CMakeLists.txt  matar_functions.cpp
examples/mesh_decomp/: CMakeLists.txt  communication_plan.h  decomp_utils.h  install_ptscotch.sh  mesh.h  mesh_decomp.cpp  mesh_io.h  mpi_type.h  state.h
examples/phaseField/srcKokkosVerbose/: CH_fourier_spectral_solver.cpp  CH_fourier_spectral_solver.h  CMakeLists.txt  fft_manager_in_place.cpp  fft_manager_out_of_place.h  fftc_fftw_out_of_place.cpp  fourier_space.cpp  fourier_space.h  global_arrays.h  initialize_comp.cpp  initialize_comp.h  local_free_energy.cpp  local_free_energy.h  main.cpp  outputs.cpp  sim_parameters.cpp  sim_parameters.h
examples/phaseField/srcMacros/: CH_fourier_spectral_solver.cpp  CH_fourier_spectral_solver.h  CMakeLists.txt  fft_manager_in_place.cpp  fft_manager_in_place.h  fft_manager_out_of_place.cpp  fft_manager_out_of_place.h  fftc_cufft_in_place.cpp  fftc_cufft_out_of_place.cpp  fftc_fftw_in_place.cpp  fourier_space.cpp  fourier_space.h  global_arrays.cpp  initialize_comp.h  local_free_energy.cpp  outputs.cpp  outputs.h
examples/phaseFieldMPI/: CMakeLists.txt  complex_arrays.cpp  complex_arrays.h  fourier_space.cpp  fourier_space.h  global_arrays.cpp  global_arrays.h  heffte_backends.h  heffte_fft.cpp  heffte_fft.h  initialize_comp.cpp  initialize_comp.h  main.cpp  profile.cpp  profile.h  sim_parameters.cpp  sim_parameters.h  system.cpp  system.h  vtk_writer_mpi_io.cpp  vtk_writer_mpi_io.h
examples/pointcloud/: CMakeLists.txt  graphics-reader.h  pointcloud-rk.cpp  pointcloud.cpp
examples/sparsetests/: CMakeLists.txt  matVec.cpp  powerIter.cpp  sparseMatVec.cpp  sparsePowerIter.cpp  timetest.py
examples/sparsetests/results/: SpPowerIter_turing.csv  (+12 more)
examples/test_rocm/: CMakeLists.txt  SomeClass.cpp  SomeClass.h  main.cpp
examples/virtualFcnKokkos/: CMakeLists.txt  child.cpp  inherited_inits.cpp  kokkos_alias.h  main_kokkos_vfcn.cpp  parents.h
examples/virtualFcnMATAR/: CMakeLists.txt  classes.cpp  classes.hpp  main.cpp
examples/watt-graph/: CMakeLists.txt  floyd.cpp  kokkos_floyd.cpp
src/: .gitignore  CMakeLists.txt  kokkos_types.h  linear_algebra.h  macros.h  matar.h
src/Kokkos/: .gitmodules
src/include/: Tpetra_LRMultiVector_decl.hpp  Tpetra_LRMultiVector_def.hpp  Tpetra_LR_WrappedDualView.hpp  aliases.h  communication_plan.h  communication_plan_old.h  host_types.h  kokkos_types.h  macros.h  mapped_mpi_types.h  matar.h  mpi_types.h  mpi_types_old.h  partition_map.h  tpetra_wrapper_types.h
test/: CMakeLists.txt  CSCArray.cpp  CSCKokkos.cpp  CSRArray.cpp  CSRKokkos.cpp  SparseColArray.cpp  SparseRowArray.cpp  kokkos_for.cpp  main.cpp  main_kokkos.cpp  parallel_hello_world.cpp  test_addition_operator.cpp  test_dual_types.cpp  test_dual_view.cpp  test_fibonnaci_array.cpp  test_for.cpp
test/couette_flow/: CMakeLists.txt  couette_flow.cpp
test/halfspace_cooling/: CMakeLists.txt  halfspace_cooling.cpp
test/laplace/: CMakeLists.txt  README.md  main_carray_right.cpp  main_carraykokkos_c_indexing.cpp  main_carraykokkos_default_indexing.cpp  main_cpp.cpp  main_farray_wrong.cpp  main_farraykokkos_default_indexing.cpp  main_farraykokkos_f_indexing.cpp
test/laplaceMPI/: CMakeLists.txt  README.md  laplace_mpi.cpp
test/phaseField/: README.md  fft_manager_out_of_place.h  global_arrays.h
test/test_cases/: CMakeLists.txt  mpi_test_main.cpp  standared_types_tests.cpp  test_CArrayKokkos.cpp  test_CMatrixKokkos.cpp  test_CSCArrayKokkos.cpp  test_CSRArrayKokkos.cpp  test_DCArrayKokkos.cpp  test_DCMatrixKokkos.cpp  test_DDynamicRaggedRightArrayKokkos.cpp  test_DFArrayKokkos.cpp  test_DFMatrixKokkos.cpp  test_DRaggedRightArrayKokkos.cpp  test_DViewCArrayKokkos.cpp  test_DViewCMatrixKokkos.cpp  test_DViewFArrayKokkos.cpp  test_DViewFMatrixKokkos.cpp  test_DynamicArrayKokkos.cpp  test_DynamicMatrixKokkos.cpp  test_DynamicRaggedDownArrayKokkos.cpp  test_DynamicRaggedRightArrayKokkos.cpp  test_FArrayKokkos.cpp  test_FMatrixKokkos.cpp  test_RaggedDownArrayKokkos.cpp  test_RaggedRightArrayKokkos.cpp  test_ViewCArrayKokkos.cpp  test_ViewCMatrixKokkos.cpp  test_ViewFArrayKokkos.cpp  test_ViewFMatrixKokkos.cpp  test_macros.cpp  test_main.cpp  test_mpi_types.cpp  test_nonkokkos_types.cpp
test/virtualFcnKokkos/: CMakeLists.txt  README.md  kokkos_alias.h  parents.h
test/watt-graph/: CMakeLists.txt
tests/: CMakeLists.txt  cuda_cmake_command.txt  ragged_main.cpp
(+4069 files in other folders)
